Add Bancor Deal, just like plain markets' deal
