# server/query.go
@@ -224,6 +224,28 @@ func QueryDealsRequestHandlerFn(hub *core.Hub) http.HandlerFunc {
 	}
 }
 
+func QueryBancorDealsRequestHandlerFn(hub *core.Hub) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		err := r.ParseForm()
+		if err != nil {
+			rest.WriteErrorResponse(w, http.StatusBadRequest,
+				sdk.AppendMsgToErr("could not parse query parameters", err.Error()))
+			return
+		}
+
+		market := r.FormValue(queryKeyMarket)
+		time, sid, count, err := parseQueryKVStoreParams(r)
+		if err != nil {
+			rest.WriteErrorResponse(w, http.StatusBadRequest, err.Error())
+			return
+		}
+
+		data, timesid := hub.QueryBancorDeal(market, time, sid, count)
+
+		postQueryKVStoreResponse(w, data, timesid)
+	}
+}
+
 func QueryBancorInfosRequestHandlerFn(hub *core.Hub) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		err := r.ParseForm()
